--- a/app/src/main/res/layout/activity_scrum.xml
+++ b/app/src/main/res/layout/activity_scrum.xml
@@ -7,234 +7,183 @@
     tools:context="com.holamundo.alejandro.alejandro123.ScrumActivity"
     android:background="@drawable/scrum">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/frameLayout">
+    <AbsoluteLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/oooo"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="57dp">
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></LinearLayout>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Scrum A Favor"
+            android:id="@+id/rbScrumAFavor"
+            android:checked="true"
+            android:layout_x="55dp"
+            android:layout_y="-2dp"
+            android:textSize="30dp"
+            android:textColor="#ffffffff" />
 
         <RadioGroup
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_gravity="center"
-            android:weightSum="1"
-            android:orientation="vertical">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_x="14dp"
+            android:layout_y="34dp">
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Scrum a Favor"
-                android:id="@+id/rbScrumAFavor"
-                android:layout_gravity="center_horizontal"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                android:textColor="#ffffffff"
-                android:checked="true" />
+                android:text="Ganado"
+                android:id="@+id/rbScrumAFavorGanado"
+                android:checked="false"
+                android:textSize="25dp"
+                android:textColor="#ff18c71b" />
 
-            <RadioGroup
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:id="@+id/ll">
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="Ganado"
-                    android:id="@+id/rbScrumAFavorGanado"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_weight="3.67"
-                    android:textColor="#ffffffff"
-                    android:checked="false" />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="Perdido"
-                    android:id="@+id/rbSrcumAfavorPerdido"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_weight="1.97"
-                    android:textColor="#ffffffff" />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="Reseteado"
-                    android:id="@+id/rbScrumAFavorReseteado"
-                    android:layout_weight="2.61"
-                    android:textColor="#ffffffff" />
-
-            </RadioGroup>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="0.09"
-                android:weightSum="1">
-
-                <TextView
-                    android:layout_width="37dp"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:id="@+id/textView" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:id="@+id/txScrumAFGAnado"
-                    android:layout_weight="0.51"
-                    android:textStyle="normal|bold"
-                    android:textAlignment="center"
-                    android:typeface="serif"
-                    android:textColor="#ffffffff" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:id="@+id/txScrumAFPerdido"
-                    android:layout_weight="0.37"
-                    android:textColor="#ffffffff" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:id="@+id/txScrumAFReseteado"
-                    android:textColor="#ffffffff" />
-            </LinearLayout>
-
-            <RadioGroup
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:id="@+id/RadioGroupEnContra"
-                android:weightSum="1">
-
-            </RadioGroup>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="47dp"
-                android:weightSum="1">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:id="@+id/textView3"
-                    android:layout_weight="0.26" />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Scrum en Contra"
-                    android:id="@+id/rbScrumenContra"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                    android:checked="true"
-                    android:textColor="#ffffffff"
-                    android:layout_weight="0.26" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="195dp"
-                android:weightSum="1">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_horizontal"
-                    android:orientation="vertical"
-                    android:weightSum="1">
-                    <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_weight="0.55">
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Reseteado"
-                            android:id="@+id/rbScrumEnContraReseteado"
-                            android:textColor="#ffffffff"
-                            android:layout_gravity="right|center_vertical" />
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Robado"
-                            android:id="@+id/rbScrumEnContraRobado"
-                            android:textColor="#ffffffff"
-                            android:layout_gravity="left|center_vertical"
-                            android:layout_weight="0.49" />
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Perdido"
-                            android:id="@+id/rbScrumEncontraPerdido"
-                            android:textColor="#ffffffff"
-                            android:layout_gravity="center"
-                            android:layout_weight="0.35" />
-
-                        <TextView
-                            android:layout_width="22dp"
-                            android:layout_height="24dp"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:id="@+id/txScrumECResetado"
-                            android:layout_weight="0.11"
-                            android:layout_gravity="right|bottom"
-                            android:textColor="#ffffffff" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:id="@+id/txScrumECPerdido"
-                            android:layout_weight="0.34"
-                            android:layout_gravity="center_horizontal|bottom"
-                            android:textColor="#ffffffff" />
-
-                        <TextView
-                            android:layout_width="23dp"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:id="@+id/txScrumRobado"
-                            android:layout_weight="0.35"
-                            android:layout_gravity="left|bottom"
-                            android:textColor="#ffffffff" />
-                    </FrameLayout>
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="SUMAR"
-                        android:id="@+id/btSumarScrum"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_weight="0.15" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <TextView
+            <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:id="@+id/txExitoSumado"
-                android:layout_gravity="center_horizontal"
-                android:textColor="#ff0d550f"
-                android:textStyle="normal|bold"
-                android:visibility="visible" />
+                android:text="Perdido"
+                android:id="@+id/rbSrcumAfavorPerdido"
+                android:checked="false"
+                android:textSize="25dp"
+                android:textColor="#ffff1712" />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reseteado"
+                android:id="@+id/rbScrumAFavorReseteado"
+                android:checked="false"
+                android:textSize="25dp"
+                android:textColor="#ffffffff" />
 
         </RadioGroup>
 
-    </FrameLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="0"
+            android:id="@+id/txScrumAFGAnado"
+            android:layout_x="206dp"
+            android:layout_y="40dp"
+            android:textColor="#ffffffff" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="0"
+            android:id="@+id/txScrumAFPerdido"
+            android:layout_x="206dp"
+            android:layout_y="70dp"
+            android:textColor="#ffffffff" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="0"
+            android:id="@+id/txScrumAFReseteado"
+            android:layout_x="204dp"
+            android:layout_y="104dp"
+            android:textColor="#ffffffff" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Scrum En Contra"
+            android:id="@+id/rbScrumenContra"
+            android:layout_x="49dp"
+            android:layout_y="147dp"
+            android:checked="true"
+            android:textSize="30dp"
+            android:textColor="#ffffffff" />
+
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_x="20dp"
+            android:layout_y="7dp"
+            android:id="@+id/as">
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ganado"
+                android:id="@+id/rbScrumEnContraRobado"
+                android:layout_alignTop="@+id/ooo"
+                android:layout_marginTop="192dp"
+                android:checked="false"
+                android:textSize="25dp"
+                android:textColor="#ff18c71b" />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Perdido"
+                android:id="@+id/rbScrumEncontraPerdido"
+                android:checked="false"
+                android:textSize="25dp"
+                android:textColor="#ffff1712" />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Resetado"
+                android:id="@+id/rbScrumEnContraReseteado"
+                android:checked="false"
+                android:textSize="25dp"
+                android:textColor="#ffffffff" />
+        </RadioGroup>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="0"
+            android:id="@+id/txScrumRobado"
+            android:layout_x="206dp"
+            android:layout_y="202dp"
+            android:textColor="#ffffffff" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="0"
+            android:id="@+id/ooo"
+            android:layout_x="205dp"
+            android:layout_y="232dp"
+            android:textColor="#ffffffff" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="0"
+            android:id="@+id/txScrumECResetado"
+            android:layout_x="206dp"
+            android:layout_y="271dp"
+            android:textColor="#ffffffff" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/btSumarScrum"
+            android:layout_x="106dp"
+            android:layout_y="343dp" />
+
+    </AbsoluteLayout>
+
 
 </RelativeLayout>
